# CorridorCalibrationPID

./: .gitignore  main.py  pyproject.toml  utils_data_read.py  utils_vis.py
corridor_calibration_module/: main.py  pyproject.toml
sumo/: config.json  test_metrics.py  utils_vis_PID.py
sumo/i24/: I24_scenario.rou.xml  flows.xml  i24.rou.xml  i24.sumocfg  i24_RDS.add.xml  i24_RDS_gt.add.xml  i24_calibrate_PID.py  i24_flowrouter.rou.xml  i24_fr.sumocfg  i24_gt.rou.xml  i24_gt.sumocfg  i24_gt2.rou.xml  i24_od.sumocfg  i24_s3.rou.xml  lane_shapes.json  routes.xml
sumo/i24/rds_file/: format_detector_names.py  generate_flow_medium.py
sumo/i24b/: 12-15_detectors.xml  12-15_detectors_gt.xml  flows.xml  generate_flow.py  get_lane_shape.py  i24_flowrouter.rou.xml  i24b.rou.xml  i24b.sumocfg  i24b_calibrate_PID.py  i24b_fr.sumocfg  i24b_gt.rou.xml  i24b_gt.sumocfg  i24b_gt2.rou.xml  lane_shapes.json  out.xml  routes.xml  tripinfo_gt.xml
sumo/onramp/: detectors.add.xml  detectors_gt.add.xml  detectors_gt_ideal.add.xml  detectors_ideal.add.xml  lane_shapes.json  onramp.rou.xml  onramp.sumocfg  onramp_calibrate_PID.py  onramp_gt.rou.xml  onramp_gt.sumocfg
sumo/onramp/scenario_configs/scenario_1/: onramp.rou.xml  onramp.sumocfg  onramp_gt.rou.xml  onramp_gt.sumocfg
sumo/onramp/scenario_configs/scenario_2/: onramp.rou.xml  onramp_gt.rou.xml
sumo/plot_data/large/scenario1/fr/: flow_pid.npy  speed_pid.npy
sumo/plot_data/large/scenario1/pid/: flow_pid.npy  flow_sim.npy  speed_pid.npy  speed_sim.npy
sumo/plot_data/large/scenario2/fr/: flow_pid.npy  speed_pid.npy
(+40 files in other folders)
