[project]
name = "corridorcalibrationpid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "simple-pid>=2.0.1",
    "traci>=1.25.0",
]
